[FIX] web_editor: align row content on the right
Part of https://github.com/odoo/odoo/pull/42136

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -456,6 +456,7 @@ body.editor_enable.editor_has_snippets {
             > div {
                 display: flex;
                 align-items: center;
+                justify-content: flex-end;
 
                 > * + * {
                     margin-left: 0.5em;
